--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walkie",
   "description": "Basecamp updates via Mac OS X 10.8 Notification Center",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "Tyler Benziger <tabenziger@gmail.com>",
   "preferGlobal": true,
   "repository": {
@@ -22,7 +22,7 @@
     "walkie-notifier": "./bin/Walkie.app/Contents/MacOS/walkie",
     "walkiejs": "./lib/walkie.js"
   },
-  "main": "./lib/walkie",
+  "main": "./lib/walkie.js",
   "engines": {
     "node": "0.8.x"
   }
