--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "walkie",
   "description": "Basecamp updates via Mac OS X 10.8 Notification Center",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "author": "Tyler Benziger <tabenziger@gmail.com>",
   "preferGlobal": true,
   "repository": {
@@ -19,7 +19,7 @@
   },
   "bin": {
     "walkie": "./bin/walkie",
-    "walkie-notifier": "./bin/Walkie.app/Contents/MacOS/walkie",
+    "walkie-notifier": "./bin/walkie-notifier",
     "walkiejs": "./lib/walkie.js"
   },
   "main": "./lib/walkie.js",
